# iot-hub-device-c-sdk

./: .code.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake_build.sh
3rd/mbedtls/: CMakeLists.txt
3rd/mbedtls/port/inc/: qcloud_iot_tls_client.h
3rd/mbedtls/port/src/: qcloud_iot_tls_client.c
app/data_template/: data_template_app.c  data_template_config.c  data_template_config.h
app/ota/: ota_app.c
common/cryptology/: CMakeLists.txt
common/cryptology/inc/: utils_base64.h  utils_hmac.h  utils_md5.h  utils_sha1.h
common/cryptology/src/: utils_hmac.c  utils_md5.c  utils_sha1.c
common/cryptology/test/: test_cryptology.cc
common/mqtt_packet/inc/: mqtt_packet.h
common/mqtt_packet/src/: mqtt_packet_deserialize.c  mqtt_packet_serialize.c
common/mqtt_packet/test/: test_mqtt_packet.cc
common/utils/inc/: utils_json.h  (+2 more)
config/settings/: basic_setting.cmake  iot_app_all.cmake  iot_explorer_setting.cmake  iot_hub_setting.cmake  qcloud_iot_config.h.in
config/toolchains/: linux_x86_gcc.cmake
docs/: SDK代码规范说明.md
include/: qcloud_iot_common.h  qcloud_iot_explorer.h  qcloud_iot_hub.h
include/common/: qcloud_iot_debug.h  qcloud_iot_device.h  qcloud_iot_error.h  qcloud_iot_params_check.h  qcloud_iot_platform.h
include/config/: qcloud_iot_config.h  qcloud_iot_host.h  qcloud_iot_variables.h
include/services/: qcloud_iot_broadcast.h  qcloud_iot_mqtt_client.h  qcloud_iot_system.h
platform/: CMakeLists.txt
platform/network/: network_interface.c  network_interface.h
services/mqtt_client/: CMakeLists.txt
services/system/: CMakeLists.txt
(+62 files in other folders)
